--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
     <div class="col-sm-3"> 
       <p>Some text..</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      	<iframe name="iframe2" src="http://www.ufpr.br/portalufpr/emidia/" style='border:0' scrolling="yes" allowfullscreen></iframe>
+
     </div>
     <div class="col-sm-3"> 
       <p>Some text..</p>
