--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="pt">
@@ -64,6 +63,9 @@
   <h3>video incluido como teste</h3><br>
   <div class="row">
     <div class="col-sm-3">
+                     
+                     	<iframe name="iframe2" src="http://www.ufpr.br/portalufpr/emidia/" style='border:0' scrolling="yes" allowfullscreen></iframe>
+
                       <h3>Ao Vivo UFPRTV</h3>
                        <script src="hls.light.min.js"></script>
                         <video id="video" controls poster="../ufpr.png" style="width: 100%" autoplay></video>
@@ -85,10 +87,8 @@
       
     </div>
     <div class="col-sm-3"> 
-      <p>teste aqui</p>
+      <p>Some text..</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-      	<iframe name="iframe2" src="http://www.ufpr.br/portalufpr/emidia/" style='border:0' scrolling="yes" allowfullscreen></iframe>
-
     </div>
     <div class="col-sm-3"> 
       <p>Some text..</p>
