--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="pt">
 <head>
-  <title>Videoteca UFPR TV</title>
+  <title>UFPR TV Lab</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
