--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="col-sm-3"> 
     <h3>UFPR TV-Teste</h3>
         <script src="hls.light.min.js"></script>
-                        <video id="video" controls poster="img/preview.jpg" style="width: 60%" autoplay></video>
+                        <video id="video" controls poster="/preview.jpg" style="width: 60%" autoplay></video>
                          <source src="http://200.17.247.224/eventos/streamteste.m3u8" type="vnd.apple.mpegURL">
 
                         
